# osa2cal

./: Cargo.toml  README.md  schedule.ics
src/: caldav.rs  config.rs  ics.rs  main.rs
