[package]
name = "osa2cal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
calDAV = "0.1.0"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
colored = "3.1.1"
dirs = "6.0.0"
hex = "0.4.3"
icalendar = "0.17.6"
indicatif = "0.18.4"
osars = { version = "0.3.1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "rustls-no-provider"] }
serde = { version = "1.0.228", features = ["derive"] }
sha1 = "0.10.6"
tokio = { version = "1.50.0", features = ["full"] }
toml = "1.0.6"
url = "2.5.8"
